Nutch Change Log

Nutch Current Development

* NUTCH-1782 NodeWalker to return current node (markus)

* NUTCH-1758 IndexChecker to send document to IndexWriters (jnioche)

* NUTCH-1786 CrawlDb should follow db.url.normalizers and db.url.filters (Diaa via markus)

* NUTCH-1757 ParserChecker to take custom metadata as input (jnioche)

* NUTCH-1676 Add rudimentary SSL support to protocol-http (jnioche, markus)

* NUTCH-1772 Injector does not need merging if no pre-existing crawldb (jnioche)

* NUTCH-1752 Cache robots.txt rules per protocol:host:port (snagel)

* NUTCH-1613 Timeouts in protocol-httpclient when crawling same host with >2 threads (brian44 via jnioche)

* NUTCH-1766 Generator to unlock crawldb and remove tempdir if generate job fails (Diaa via jnioche)

* NUTCH-207 Bandwidth target for fetcher rather than a thread count (jnioche)

* NUTCH-1182 fetcher to log hung threads (snagel)

* NUTCH-1759 Upgrade to Crawler Commons 0.4 (jnioche)

* NUTCH-1764 readdb to show command-line help if no action (-stats, -dump, etc.) given (Diaa via snagel)

* NUTCH-1700 Remove deprecated code from creativecommons plugin (lewismc)

* NUTCH-1761 Crawl script fails to find job file if not started from inside bin dir (David Hosking, jnioche)

* NUTCH-1603 ZIP parser complains about truncated PDF file (snagel)

* NUTCH-1720 Duplicate lines in HttpBase.java (Walter Tietze via jnioche)

* NUTCH-1750 Improvement of Fetcher's reportStatus (jnioche)

* NUTCH-1747 Use AtomicInteger as semaphore in Fetcher (jnioche)

* NUTCH-1735 code dedup fetcher queue redirects (snagel)

* NUTCH-1745 Upgrade to ElasticSearch 1.1.0 (jnioche)

* NUTCH-1645 Junit Test Case for Adaptive Fetch Schedule class (Yasin Kılınç, lufeng, Sertac TURKEL via snagel)

* NUTCH-1737 Upgrade to recent JUnit 4.x (lewismc)

* NUTCH-1733 parse-html to support HTML5 charset definitions (snagel)

* NUTCH-1671 indexchecker to add digest field (snagel, lufeng)

Nutch 1.8      - 11/03/2014 (dd/mm/yyyy)